--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1>
-  {{title}}
-</h1>
+<app-header>Header not loaded</app-header>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
+<app-footer>Footer not loaded</app-footer>
