--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <a href="#"> <i class="fa fa-code fa-front" aria-hidden="true"> </i>  </a>
+          <a href="/program-languages"> <i class="fa fa-code fa-front" aria-hidden="true"> </i>  </a>
           <h2>Program languages</h2>
           <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
           <p></p>
@@ -20,4 +20,13 @@
           <p>During my study time, I have achieved a couple projects.<p></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
+
+      <div class="line"></div>
+      <div class="row">
+         <div class="col-md-4 col-centered text-center">
+          <a href="#"> <i class="fa fa-user fa-front" aria-hidden="true"> </i>  </a>
+          <h2>Contact</h2>
+          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+        </div><!-- /.col-lg-4 -->
+      </div>
 </div>
